# marketplace-connect-for-obs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.json
.github/actions/run-clang-format/: action.yaml
.github/scripts/: .package.zsh  Package-Windows.ps1
.github/workflows/: build-and-tag-release.yaml  build-project.yaml  pr-pull.yaml  push.yaml
build-aux/: .run-format.zsh
cmake/common/: bootstrap.cmake
cmake/macos/: helpers.cmake  xcode.cmake
cmake/windows/: helpers.cmake
cmake/windows/resources/: elgato-marketplace-connect-loader.rc.in
data/: plugins.json
data/locale/: da-DK.ini  de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nl-NL.ini  pt-BR.ini  pt-PT.ini  ru-RU.ini  sv-SE.ini  zh-TW.ini
loader/: Info.plist.in  main-macos.cpp  main.cpp
loader/macos/: Info.plist.in  main.mm  urlHandler.cpp  urlHandler.hpp
src/: api.cpp  api.hpp  downloader.cpp  downloader.h  elgato-cloud-config.cpp  elgato-cloud-config.hpp  elgato-cloud-data.cpp  elgato-cloud-data.hpp  elgato-cloud-window.cpp  elgato-cloud-window.hpp  elgato-cloud-window.ui  elgato-product.cpp  elgato-product.hpp  elgato-stream-deck-widgets.cpp  elgato-stream-deck-widgets.hpp  elgato-styles.hpp  elgato-update-modal.cpp  elgato-update-modal.hpp  elgato-widgets.cpp  elgato-widgets.hpp  export-wizard.cpp  export-wizard.hpp  flowlayout.cpp  flowlayout.h  obs-utils.cpp  obs-utils.hpp  platform.cpp  platform.h  plugin-module.cpp  plugin-support.c  plugin-support.c.in  plugin-support.h  plugins.cpp  plugins.hpp  qt-display.cpp  qt-display.hpp  scene-bundle.cpp  scene-bundle.hpp  scene-collection-info.cpp  scene-collection-info.hpp  (+10 more)
